added parallel post

--- a/src/LicenseValidator/LicenseValidator.Core.Tests/LicenseValidator.Core.Tests.csproj
+++ b/src/LicenseValidator/LicenseValidator.Core.Tests/LicenseValidator.Core.Tests.csproj
@@ -47,6 +47,9 @@
     <Reference Include="FlitBit.IoC">
       <HintPath>..\packages\FlitBit.IoC.2.13.1\lib\net40\FlitBit.IoC.dll</HintPath>
     </Reference>
+    <Reference Include="FlitBit.Represent">
+      <HintPath>..\packages\FlitBit.Represent.1.2.3\lib\net40\FlitBit.Represent.dll</HintPath>
+    </Reference>
     <Reference Include="FlitBit.Wireup">
       <HintPath>..\packages\FlitBit.Wireup.3.1.0\lib\net40\FlitBit.Wireup.dll</HintPath>
     </Reference>
@@ -74,11 +77,20 @@
     <Compile Include="AbstractTests.cs" />
     <Compile Include="ExternalWireup\Dependency.FlitBit.Dto.cs" />
     <Compile Include="ExternalWireup\Dependency.FlitBit.IoC.cs" />
+    <Compile Include="ExternalWireup\Dependency.FlitBit.Represent.cs" />
     <Compile Include="ExternalWireup\Dependency.FlitBit.Wireup.cs" />
+    <Compile Include="LicenseValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LicenseValidator.Core\LicenseValidator.Core.csproj">
+      <Project>{CEAD0FF3-D969-4991-99CE-F62EA98144F6}</Project>
+      <Name>LicenseValidator.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
