--- a/src/LicenseValidator/LicenseValidator.Core/LicenseValidator.Core.csproj
+++ b/src/LicenseValidator/LicenseValidator.Core/LicenseValidator.Core.csproj
@@ -47,6 +47,9 @@
     <Reference Include="FlitBit.IoC">
       <HintPath>..\packages\FlitBit.IoC.2.13.1\lib\net40\FlitBit.IoC.dll</HintPath>
     </Reference>
+    <Reference Include="FlitBit.Represent">
+      <HintPath>..\packages\FlitBit.Represent.1.2.3\lib\net40\FlitBit.Represent.dll</HintPath>
+    </Reference>
     <Reference Include="FlitBit.Wireup">
       <HintPath>..\packages\FlitBit.Wireup.3.1.0\lib\net40\FlitBit.Wireup.dll</HintPath>
     </Reference>
@@ -63,6 +66,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -70,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExternalWireup\Dependency.FlitBit.Represent.cs" />
     <Compile Include="LicenseValidator.cs" />
     <Compile Include="Dtos\IBasicValidateLicense.cs" />
     <Compile Include="Dtos\ILicense.cs" />
@@ -82,6 +87,7 @@
     <Compile Include="ExternalWireup\Dependency.FlitBit.IoC.cs" />
     <Compile Include="ExternalWireup\Dependency.FlitBit.Wireup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
