--- a/src/LicenseValidator/LicenseValidator.Core/packages.config
+++ b/src/LicenseValidator/LicenseValidator.Core/packages.config
@@ -5,6 +5,7 @@
   <package id="FlitBit.Dto" version="2.5.0" targetFramework="net45" />
   <package id="FlitBit.Emit" version="2.8.7" targetFramework="net45" />
   <package id="FlitBit.IoC" version="2.13.1" targetFramework="net45" />
+  <package id="FlitBit.Represent" version="1.2.3" targetFramework="net45" />
   <package id="FlitBit.Wireup" version="3.1.0" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="7.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
