--- a/src/LicenseValidator/LicenseValidator.Core/LicenseValidator.Core.nuspec
+++ b/src/LicenseValidator/LicenseValidator.Core/LicenseValidator.Core.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <version>$version$</version>
-    <authors>$author$</authors>
+    <authors>Streamline Technology</authors>
     <owners />
     <id>LicenseValidator</id>
     <title>License Validator Client</title>
